@@ -23,7 +23,6 @@ import java.io.File;
 import java.io.IOException;
 import java.io.StringWriter;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.Map;
 import java.util.StringTokenizer;
 
@@ -49,10 +48,10 @@ public abstract class VariableProcessor
 	private enum MATH_OP
 	{
 		PLUS, MINUS, MULTIPLY, DIVIDE
-	};
+	}
 
-	/** The current indenting to be used for debug output of jep evaluations. */
-	protected String jepIndent = "";
+    /** The current indenting to be used for debug output of jep evaluations. */
+	private String jepIndent = "";
 	protected PlayerCharacter pc;
 
 	private int cachePaused;
@@ -66,7 +65,7 @@ public abstract class VariableProcessor
 		Float d = null;
 		try
 		{
-			d = new Float(foo);
+			d = Float.valueOf(foo);
 		}
 		catch (NumberFormatException nfe)
 		{
@@ -79,8 +78,8 @@ public abstract class VariableProcessor
 			retVal = d;
 			if (Logging.isDebugMode())
 			{
-				Logging.debugPrint(new StringBuilder().append(jepIndent).append("export variable for: '")
-					.append(element).append("' = ").append(d).toString());
+				Logging.debugPrint(jepIndent + "export variable for: '"
+						+ element + "' = " + d);
 			}
 		}
 
@@ -123,7 +122,7 @@ public abstract class VariableProcessor
 	 * @param spellLevelTemp The temporary spell level
 	 * @return The value of the variable
 	 */
-	public Float getVariableValue(final CharacterSpell aSpell, String varString, String src, int spellLevelTemp)
+	public Float getVariableValue(CharacterSpell aSpell, String varString, String src, int spellLevelTemp)
 	{
 		Float result = getJepOnlyVariableValue(aSpell, varString, src, spellLevelTemp);
 
@@ -131,7 +130,7 @@ public abstract class VariableProcessor
 		{
 			result = processBrokenParser(aSpell, varString, src, spellLevelTemp);
 
-			String cacheString = makeCacheString(aSpell == null ? null : aSpell, varString, src, spellLevelTemp);
+			String cacheString = makeCacheString(aSpell, varString, src, spellLevelTemp);
 
 			addCachedVariable(cacheString, result);
 		}
@@ -154,7 +153,7 @@ public abstract class VariableProcessor
 		// First try to just parse it as a number.
 		try
 		{
-			return new Float(varString);
+			return Float.valueOf(varString);
 		}
 		catch (NumberFormatException e)
 		{
@@ -162,7 +161,7 @@ public abstract class VariableProcessor
 			// number, If we got here it wasn't
 		}
 
-		String cacheString = makeCacheString(aSpell == null ? null : aSpell, varString, src, spellLevelTemp);
+		String cacheString = makeCacheString(aSpell, varString, src, spellLevelTemp);
 
 		Float total = getCachedVariable(cacheString);
 		if (total != null)
@@ -215,7 +214,7 @@ public abstract class VariableProcessor
 	 */
 	private Float processBrokenParser(final CharacterSpell aSpell, String aString, String src, int spellLevelTemp)
 	{
-		Float total = new Float(0.0);
+		Float total = (float) 0.0;
 		aString = aString.toUpperCase();
 		src = src.toUpperCase();
 
@@ -244,7 +243,7 @@ public abstract class VariableProcessor
 		if (aString.startsWith(".IF."))
 		{
 			final StringTokenizer aTok = new StringTokenizer(aString.substring(4), ".", true);
-			String bString = "";
+			StringBuilder bString = new StringBuilder();
 			Float val1 = null; // first value
 			Float val2 = null; // other value in comparison
 			Float valt = null; // value if comparison is true
@@ -261,27 +260,15 @@ public abstract class VariableProcessor
 					// Truncate final . character
 					val1 = getVariableValue(aSpell, bString.substring(0, bString.length() - 1), src, spellLevelTemp); 
 					aTok.nextToken(); // discard next . character
-					bString = "";
+					bString = new StringBuilder();
 
-					if ("LT".equals(cString))
+					switch (cString)
 					{
-						comp = 1;
-					}
-					else if ("LTEQ".equals(cString))
-					{
-						comp = 2;
-					}
-					else if ("EQ".equals(cString))
-					{
-						comp = 3;
-					}
-					else if ("GT".equals(cString))
-					{
-						comp = 4;
-					}
-					else if ("GTEQ".equals(cString))
-					{
-						comp = 5;
+						case "LT" -> comp = 1;
+						case "LTEQ" -> comp = 2;
+						case "EQ" -> comp = 3;
+						case "GT" -> comp = 4;
+						case "GTEQ" -> comp = 5;
 					}
 				}
 				else if ("THEN".equals(cString))
@@ -289,24 +276,24 @@ public abstract class VariableProcessor
 					// Truncate final . character
 					val2 = getVariableValue(aSpell, bString.substring(0, bString.length() - 1), src, spellLevelTemp); 
 					aTok.nextToken(); // discard next . character
-					bString = "";
+					bString = new StringBuilder();
 				}
 				else if ("ELSE".equals(cString))
 				{
 					// Truncate final . character
 					valt = getVariableValue(aSpell, bString.substring(0, bString.length() - 1), src, spellLevelTemp);
 					aTok.nextToken(); // discard next . character
-					bString = "";
+					bString = new StringBuilder();
 				}
 				else
 				{
-					bString += cString;
+					bString.append(cString);
 				}
 			}
 
 			if ((val1 != null) && (val2 != null) && (valt != null))
 			{
-				valf = getVariableValue(aSpell, bString, src, spellLevelTemp);
+				valf = getVariableValue(aSpell, bString.toString(), src, spellLevelTemp);
 				total = valt;
 
 				switch (comp)
@@ -360,7 +347,7 @@ public abstract class VariableProcessor
 						Logging.errorPrint("ERROR - badly formed statement:" + aString + ':' + val1.toString() + ':'
 							+ val2.toString() + ':' + comp);
 
-						return new Float(0.0);
+						return (float) 0.0;
 				}
 
 				return total;
@@ -394,24 +381,12 @@ public abstract class VariableProcessor
 					valString = tmp.toString();
 				}
 
-				if (i < aString.length())
+				switch (aString.charAt(i))
 				{
-					if (!aString.isEmpty() && aString.charAt(i) == '+')
-					{
-						nextMode = MATH_OP.PLUS;
-					}
-					else if (!aString.isEmpty() && aString.charAt(i) == '-')
-					{
-						nextMode = MATH_OP.MINUS;
-					}
-					else if (!aString.isEmpty() && aString.charAt(i) == '*')
-					{
-						nextMode = MATH_OP.MULTIPLY;
-					}
-					else if (!aString.isEmpty() && aString.charAt(i) == '/')
-					{
-						nextMode = MATH_OP.DIVIDE;
-					}
+					case '+' -> nextMode = MATH_OP.PLUS;
+					case '-' -> nextMode = MATH_OP.MINUS;
+					case '*' -> nextMode = MATH_OP.MULTIPLY;
+					case '/' -> nextMode = MATH_OP.DIVIDE;
 				}
 
 				if (!valString.isEmpty())
@@ -429,31 +404,12 @@ public abstract class VariableProcessor
 
 					switch (mode)
 					{
-						case PLUS:
-							total += valFloat;
-
-							break;
-
-						case MINUS:
-							total -= valFloat;
-
-							break;
-
-						case MULTIPLY:
-							total *= valFloat;
-
-							break;
-
-						case DIVIDE:
-							total /= valFloat;
-
-							break;
-
-						default:
-							Logging.errorPrint(
+						case PLUS -> total += valFloat;
+						case MINUS -> total -= valFloat;
+						case MULTIPLY -> total *= valFloat;
+						case DIVIDE -> total /= valFloat;
+						default -> Logging.errorPrint(
 								"In PlayerCharacter.getVariableValue the mode " + mode + " is unsupported.");
-
-							break;
 					}
 				}
 
@@ -499,9 +455,8 @@ public abstract class VariableProcessor
 				return null;
 			}
 
-			for (Iterator<String> iter = parser.getSymbolTable().keySet().iterator(); iter.hasNext();)
+			for (final String element : (Iterable<String>) parser.getSymbolTable().keySet())
 			{
-				final String element = iter.next();
 				if ("e".equals(element) || "FALSE".equals(element) || "pi".equals(element) || "TRUE".equals(element))
 				{
 					continue;
@@ -511,8 +466,7 @@ public abstract class VariableProcessor
 				if (d != null)
 				{
 					parser.addVariable(element, d.doubleValue());
-				}
-				else
+				} else
 				{
 					// we could not get a value for all of the variables, so it must not have been a JEP function
 					// after all...
@@ -529,7 +483,7 @@ public abstract class VariableProcessor
 				}
 				try
 				{
-					return new CachableResult(new Float(result.toString()), parser.isResultCachable());
+					return new CachableResult(Float.valueOf(result.toString()), parser.isResultCachable());
 				}
 				catch (NumberFormatException nfe)
 				{
@@ -542,7 +496,7 @@ public abstract class VariableProcessor
 			}
 			if (parser.hasError())
 			{
-				Logging.errorPrint("Failed to process formala " + formula + " due to error: " + parser.getErrorInfo());
+				Logging.errorPrint("Failed to process formula " + formula + " due to error: " + parser.getErrorInfo());
 			}
 			if (Logging.isLoggable(Logging.DEBUG) && formula.startsWith(DEBUG_FORMULA_PREFIX))
 			{
@@ -560,7 +514,7 @@ public abstract class VariableProcessor
 		}
 	}
 
-	abstract Float getInternalVariable(final CharacterSpell aSpell, String valString, final String src);
+	abstract Float getInternalVariable(CharacterSpell aSpell, String valString, String src);
 
 	/**
 	 * Get a value for the term as evaluated in the context of the PC that
@@ -585,10 +539,10 @@ public abstract class VariableProcessor
 			final Float value = pc.getVariable(term, true);
 			if (Logging.isDebugMode())
 			{
-				Logging.debugPrint(new StringBuilder().append(jepIndent).append("variable for: '").append(term)
-					.append("' = ").append(value).toString());
+				Logging.debugPrint(jepIndent + "variable for: '" + term
+						+ "' = " + value);
 			}
-			retVal = new Float(value.doubleValue());
+			retVal = (float) value.doubleValue();
 		}
 
 		if (retVal == null)
@@ -766,7 +720,7 @@ public abstract class VariableProcessor
 	{
 		final StringWriter sWriter = new StringWriter();
 		final BufferedWriter aWriter = new BufferedWriter(sWriter);
-		final ExportHandler aExport = new ExportHandler(new File(""));
+		final ExportHandler aExport = ExportHandler.createExportHandler(new File(""));
 		aExport.replaceTokenSkipMath(pc, valString, aWriter);
 		sWriter.flush();
 
